fix(nop-job): Plan 21 对抗式审查修复 — 31个发现，39个文件
Phase 1 (P0+P1):
- F1+F13: 修复dispatch timeout死代码，startTimeOrNow使用updateTime兜底
- R2-1: PARALLEL策略设置activeFireCount=0（永不阻塞）
- F2: overlay取消fire时更新totalFireCount/failFireCount统计
- F3: TERMINAL_FIRE_STATUSES常量集中化，包含SUCCESS和FAILED
- F4: 提取TriggerSpecHelper共享工具类，合并4处重复代码
- F5: maxExecutionCount使用totalFireCount（实际完成数）而非fireCount
- F7: cancel上下文添加shardingIndex/shardingTotal/targetHost属性
- F12: insertManualFire返回boolean，主动触发冲突时抛出异常
- R2-3: 删除无调用者的insertTaskAndMarkFireDispatching重载
- R2-4: 按schedule配置的timeoutSeconds执行超时检查
- R2-5: SUSPICIOUS状态视为pending，fire保持RUNNING直到超时升级
- R2-12: RECOVERY策略无失败fire时正常创建新fire

Phase 2:
- F8+R2-10: worker SUSPICIOUS覆写竞态修复，handleExecutionResult和completeTaskWithFailure均跳过非活跃状态
- F6: tryLockTasksForExecute添加@Transactional(REQUIRES_NEW)
- F10: NopJobTaskBizModel.delete()禁止直接删除
- F11: resolveFinalFireStatus添加broadcast优先级链文档注释
- F15: overlay cancel循环添加try-catch容错
- R2-19: TriggerBuilder接入OnceTrigger

Phase 3:
- R2-6: pauseCalendarSpec JSON解析接入TriggerSpec
- R2-16/R2-17: 删除IJobTaskStore中无调用者的newTask/saveTask/updateTaskProgress
- R2-18: targetHost列标注为reserved for future use